fix the float text overflow

--- a/css/shop.css
+++ b/css/shop.css
@@ -3,7 +3,7 @@
 .target_box{max-width: 280px; padding:10px; border:1px solid #aaa; background-color:#fff;}
 .custom_container{position:absolute; background-color:rgba(0, 0, 0, .5); background-color:#999\9;}
 .custom_container img{max-width: 270px; max-height: 200px; padding:0; position:relative;}
-.desr{width: 100%; max-height: 30px;clear: both;padding:0; margin: 5px; position:relative;}
+.desr{width: 100%; clear: both;padding:0; margin: 5px; position:relative;}
 /*end*/
 #content{
 	`height:1120px;
